@@ -1,3 +1,7 @@
+2001-12-22  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* usecode/intrinsics.cc,gamewin.cc,gamewin.h: Added 'armageddon' flag.
+
 2001-12-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* Makefile.am: really fixed subdir order now... (data depends on tools)
 
